fix height to avoid veritcal scrollbar

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -112,7 +112,7 @@ img {
 .place-ship {
   padding: 0.8em;
   width: min(60rem, 100%);
-  height: 90vh;
+  height: 80vh;
   display: grid;
   gap: 1rem;
   grid-template-rows: 1fr 4fr 1fr;
@@ -205,6 +205,7 @@ img {
 .play-ground {
   padding: 0.8em;
   width: 80vw;
+  height: 80vh;
   display: flex;
   gap: 2em;
   flex-direction: column;
